--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <section id="topbar" class="topbar d-flex align-items-center">
+  <!--<section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a
@@ -48,7 +48,7 @@
         <a href="https://www.instagram.com/mipdevp/" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
     </div>
-  </section><!-- End Top Bar -->
+  </section> End Top Bar -->
 
   <header id="header" class="header d-flex align-items-center">
 
@@ -59,10 +59,11 @@
       </a>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="#hero">Beranda</a></li>
+          <li><a href="#about">Tentang</a></li>
+          <li><a href="#services">Layanan</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#faq">FAQs</a></li>
           <!--<li class="dropdown"><a href="#"><span>Drop Down</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -82,7 +83,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>-->
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Kontak</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -98,7 +99,7 @@
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
-          <h2><span>Kembangkan Bisnismu dengan Kami!</span> </h2>
+          <h2><span>Kembangkan bisnismu</span> dengan kami!</h2>
           <p>Melayani pembuatan Aplikasi Website/Mobile dan Landing Page!
           </p>
           <div class="d-flex justify-content-center justify-content-lg-start">
@@ -136,7 +137,7 @@
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
               <p>MIPDEVP merupakan perusahaan Startup Digital yang bergerak di
-                bidang jasa pembuatan aplikasi dan website yang dipercaya Klien dan Perusahaan sejak tahun 2018. Kami
+                bidang jasa pembuatan aplikasi dan website yang dipercaya banyak Klien sejak tahun 2018. Kami
                 menyediakan solusi dalam menyediakan aplikasi
                 teroptimalisasi yang berguna untuk kemajuan dan kelancaran bisnis
                 anda. </p>
@@ -194,21 +195,15 @@
           <div class="col-lg-6">
 
             <div class="stats-item d-flex align-items-center">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="2"
                 class="purecounter"></span>
               <p><strong>Happy Clients</strong> consequuntur quae diredo para mesta</p>
             </div><!-- End Stats Item -->
 
             <div class="stats-item d-flex align-items-center">
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="2"
                 class="purecounter"></span>
               <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-            </div><!-- End Stats Item -->
-
-            <div class="stats-item d-flex align-items-center">
-              <span data-purecounter-start="0" data-purecounter-end="453" data-purecounter-duration="1"
-                class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
             </div><!-- End Stats Item -->
 
           </div>
@@ -696,7 +691,7 @@
       </div>
     </section> -->
 
-    <!-- ======= Pricing Section ======= -->
+    <!-- ======= Pricing Section =======
     <section id="pricing" class="pricing sections-bg">
       <div class="container" data-aos="fade-up">
 
@@ -724,7 +719,7 @@
               </ul>
               <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
             </div>
-          </div><!-- End Pricing Item -->
+          </div>End Pricing Item 
 
           <div class="col-lg-4">
             <div class="pricing-item featured">
@@ -743,30 +738,30 @@
               </ul>
               <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
             </div>
-          </div><!-- End Pricing Item -->
+          </div>End Pricing Item 
 
-          <div class="col-lg-4">
-            <div class="pricing-item">
-              <h3>Developer Plan</h3>
-              <div class="icon">
-                <i class="bi bi-send"></i>
-              </div>
-              <h4><sup>$</sup>49<span> / month</span></h4>
-              <ul>
-                <li><i class="bi bi-check"></i> Quam adipiscing vitae proin</li>
-                <li><i class="bi bi-check"></i> Nec feugiat nisl pretium</li>
-                <li><i class="bi bi-check"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="bi bi-check"></i> Pharetra massa massa ultricies</li>
-                <li><i class="bi bi-check"></i> Massa ultricies mi quis hendrerit</li>
-              </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
-            </div>
-          </div><!-- End Pricing Item -->
-
+    <div class="col-lg-4">
+      <div class="pricing-item">
+        <h3>Developer Plan</h3>
+        <div class="icon">
+          <i class="bi bi-send"></i>
         </div>
-
+        <h4><sup>$</sup>49<span> / month</span></h4>
+        <ul>
+          <li><i class="bi bi-check"></i> Quam adipiscing vitae proin</li>
+          <li><i class="bi bi-check"></i> Nec feugiat nisl pretium</li>
+          <li><i class="bi bi-check"></i> Nulla at volutpat diam uteera</li>
+          <li><i class="bi bi-check"></i> Pharetra massa massa ultricies</li>
+          <li><i class="bi bi-check"></i> Massa ultricies mi quis hendrerit</li>
+        </ul>
+        <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
       </div>
-    </section><!-- End Pricing Section -->
+    </div>End Pricing Item 
+
+    </div>
+
+    </div>
+    </section> End Pricing Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq">
@@ -881,12 +876,12 @@
       </div>
     </section><!-- End Frequently Asked Questions Section -->
 
-    <!-- ======= Recent Blog Posts Section ======= -->
+    <!-- ======= Video Tutorial Terbaru ======= -->
     <section id="recent-posts" class="recent-posts sections-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Recent Blog Posts</h2>
+          <h2>Video Tutorial Terbaru</h2>
           <p>Consequatur libero assumenda est voluptatem est quidem illum et officia imilique qui vel architecto
             accusamus fugit aut qui distinctio</p>
         </div>
@@ -1132,8 +1127,6 @@
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
-
-  <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
