redesign part 3, including navbar, hero-image, clients and call to action section

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <!--<section id="topbar" class="topbar d-flex align-items-center">
+  <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a
-            href="mailto:contact@example.com">mipdevp@gmail.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>Telegram</span></i>
+        <i class="bi bi-phone d-flex align-items-center"><a href=""><span>Telegram - Fast Response</span></a></i>
+        <i class="bi bi-envelope d-flex align-items-center ms-4"><a
+            href="mailto:mipdevp@gmail.com">mipdevp@gmail.com</a></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://www.youtube.com/c/MipdevpChannel" class="youtube"><i class="bi bi-youtube"></i></a>
@@ -48,19 +48,20 @@
         <a href="https://www.instagram.com/mipdevp/" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
     </div>
-  </section> End Top Bar -->
+  </section>
+  <!--End Top Bar -->
 
   <header id="header" class="header d-flex align-items-center">
 
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <!--<h1>Impact<span>.</span></h1>-->
       </a>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero">Beranda</a></li>
+          <li><a href="#topbar">Beranda</a></li>
           <li><a href="#about">Tentang</a></li>
+          <li><a href="#clients">Klien</a></li>
           <li><a href="#services">Layanan</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#faq">FAQs</a></li>
@@ -98,8 +99,8 @@
   <section id="hero" class="hero">
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
-        <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
-          <h2><span>Kembangkan bisnismu</span> dengan kami!</h2>
+        <div class="col-lg-7 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
+          <h1><span>Kembangkan bisnismu</span> dengan kami!</h1>
           <p>Melayani pembuatan Aplikasi Website/Mobile dan Landing Page!
           </p>
           <div class="d-flex justify-content-center justify-content-lg-start">
@@ -109,12 +110,10 @@
                 Kami</span></a>
           </div>
         </div>
-        <div class="col-lg-6 order-1 order-lg-2">
-          <img src="assets/img/hero-img.svg" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="100">
+        <div class="col-lg-5 order-1 order-lg-2">
+          <img src="assets/img/hero-img2.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="100">
         </div>
       </div>
-    </div>
-
     </div>
   </section>
   <!-- End Hero Section -->
@@ -126,7 +125,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>About Us</h2>
+          <h2>Tentang Kami</h2>
         </div>
 
         <div class="row gy-4">
@@ -136,11 +135,8 @@
           </div>
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
-              <p>MIPDEVP merupakan perusahaan Startup Digital yang bergerak di
-                bidang jasa pembuatan aplikasi dan website yang dipercaya banyak Klien sejak tahun 2018. Kami
-                menyediakan solusi dalam menyediakan aplikasi
-                teroptimalisasi yang berguna untuk kemajuan dan kelancaran bisnis
-                anda. </p>
+              <p><span>MIPDEVP</span> merupakan perusahaan Startup Digital yang bergerak di
+                bidang jasa pembuatan aplikasi dan website yang dipercaya banyak Klien sejak tahun 2018.</p>
               <ul>
                 <li><i class="bi bi-check-circle-fill"></i>Mengutamakan proses bisnis yang ada.
                 </li>
@@ -152,7 +148,9 @@
                 </li>
               </ul>
               <p>
-                MIPDEVP dapat menjadi jembatan dalam mewujudkan kemajuan usaha
+                Kami menyediakan solusi dalam menyediakan aplikasi
+                teroptimalisasi yang berguna untuk kemajuan dan kelancaran bisnis
+                anda. MIPDEVP dapat menjadi jembatan dalam mewujudkan kemajuan usaha
                 Anda!
               </p>
             </div>
@@ -165,17 +163,28 @@
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
       <div class="container" data-aos="zoom-out">
+        <div class="section-header">
+          <h2>Klien</h2>
+          <p>Berikut beberapa Klien dari berbagai Perusahaan dan Instansi Pemerintahan yang sudah mempercayakan kami :
+          </p>
+        </div>
 
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/insitut-teknologi-dan-bisnis-mesuji.png" alt="">
+            </div>
+            <div class="swiper-slide"><img
+                src="assets/img/clients/kantor-perwakilan-bank-indonesia-provinsi-lampung.png" alt="">
+            </div>
+            <div class="swiper-slide"><img src="assets/img/clients/kementrian-kebudayaan-pariwisata-lombok-utara.png"
+                alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/politeknik-negeri-lampung.png" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/pemerintahan-provinsi-kalimantan-barat.png" alt="">
+            </div>
+            <div class="swiper-slide"><img src="assets/img/clients/pembinaan-dan-pelatihan-private-mandiri-polisi.png"
+                alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/mitra-penta-solusindo.png" alt="">
+            </div>
           </div>
         </div>
 
@@ -195,13 +204,13 @@
           <div class="col-lg-6">
 
             <div class="stats-item d-flex align-items-center">
-              <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="2"
+              <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="2"
                 class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae diredo para mesta</p>
+              <p><strong>Klien yang Puas</strong> meliputi Perusahaan dan Instansi Pemerintahan</p>
             </div><!-- End Stats Item -->
 
             <div class="stats-item d-flex align-items-center">
-              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="2"
+              <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="2"
                 class="purecounter"></span>
               <p><strong>Projects</strong> adipisci atque cum quia aut</p>
             </div><!-- End Stats Item -->
@@ -216,12 +225,11 @@
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action" class="call-to-action">
       <div class="container text-center" data-aos="zoom-out">
-        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
-        <h3>Call To Action</h3>
+        <h3>Buat Website Impian Anda Sekarang!</h3>
         <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <a class="cta-btn" href="#">Call To Action</a>
+        <a class="cta-btn" href="#">Pesan Sekarang</a>
       </div>
     </section><!-- End Call To Action Section -->
 
@@ -1111,14 +1119,14 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Impact</span></strong>. All Rights Reserved
+        <strong><span>MIPDEVP</span></strong>, 2022.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/impact-bootstrap-business-website-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <a>Designed by MIPDEVP</a>
       </div>
     </div>
 
