all is ready to go, except seo on page

--- a/index.html
+++ b/index.html
@@ -557,13 +557,13 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-1">
                     <span class="num">1.</span>
-                    Non consectetur a erat nam at lectus urna duis?
+                    Berapa biaya pembuatan website?
                   </button>
                 </h3>
-                <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                <div id="faq-content-1" class="accordion-collapse collapse show" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                    gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                   Biaya menyesuaikan dengan kebutuhan dan kompleksitas Website yang dibuat baik itu Landing Page dan Aplikasi Website. Diskusikan kebutuhan Website anda melalui Telegram
+                   <a href="#"> di sini.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -573,14 +573,13 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-2">
                     <span class="num">2.</span>
-                    Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
+                    Beli Website di sini, gratis SEO On Page?
                   </button>
                 </h3>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                    donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque
-                    elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Penerapan SEO On Page tidak termasuk dalam pembuatan Website Reguler, jika anda membutuhkan penerapan SEO On Page 
+                    ada tambahan biaya dari harga reguler website.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -590,15 +589,13 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-3">
                     <span class="num">3.</span>
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?
+                    Kursus Singkat di MIPDEVP, emang bisa?
                   </button>
                 </h3>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar
-                    elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque
-                    eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis
-                    sed odio morbi quis
+                    Bisa banget! Untuk anda yang kesulitan dalam projek atau tugas kuliah, tim MIPDEVP menyediakan Kursus Singkat sampai problem 
+                    terselesaikan.</br> Biaya kursus menyesuaikan kompleksitas pemrograman anda dan bisa didiskusikan lebih lanjut.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -608,14 +605,13 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-4">
                     <span class="num">4.</span>
-                    Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+                    Proposal MIPDEVP
                   </button>
                 </h3>
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                    donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque
-                    elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Anda bisa menghubungi Admin kami untuk mendapatkan proposal MIPDEVP
+                    sebagai bahan pertimbangan atau diskusi lebih lanjut. Silakan klik <a href="#">link berikut.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -625,14 +621,12 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-5">
                     <span class="num">5.</span>
-                    Tempus quam pellentesque nec nam aliquam sem et tortor consequat?
+                    Mau bertanya lebih lanjut?
                   </button>
                 </h3>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in.
-                    Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est.
-                    Purus gravida quis blandit turpis cursus in
+                    Kami siap melayani pertanyaan Anda seputar pembuatan website dan pelatihan pemrograman, silakan klik <a href="#">link berikut.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -808,7 +802,8 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        <strong><span>MIPDEVP</span></strong>, 2022.
+        
+        <strong><span>MIPDEVP</span></strong> @2022. All Rights Reserved.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
