seo on page on progress

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="google-site-verification" content="WK0y8c4lCt7yvVrBkNrqnad-VvuFf2LE7gvpaito1nI" />
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -10,7 +11,7 @@
   <meta name="geo.country" content="id">
   <meta name="geo.placename" content="Indonesia">
   <meta name="title" content="Buat Website Terkini dan Berkualitas di Indonesia - MIPDEVP" />
-  <meta content="Website desain dengan teknologi terkini ada di tangan Anda. Jangkau lebih banyak pelanggan, pesan sekarang!" name="description">
+  <meta content="Website dengan desain dan teknologi terkini ada di tangan Anda. Mulai dari Company Profile hingga Aplikasi Website, kembangkan bisnis dan jangkau lebih banyak pelanggan. Pesan sekarang!" name="description">
   <meta content="buat website, aplikasi website, landing page, company profile, seo friendly, seo on page, kursus pemrograman" name="keywords">
   <meta name="author" content="MIPDEVP" />
   <link rel="canonical" href="https://mipdevp.com" />
@@ -19,14 +20,14 @@
   <meta property="og:title" content="Buat Website Terkini dan Berkualitas di Indonesia - MIPDEVP"/>
   <meta property="og:locale" content="id_ID">
   <meta property="og:site_name" content="MIPDEVP">
-  <meta property="og:description" content="Website desain dengan teknologi terkini ada di tangan Anda. Jangkau lebih banyak pelanggan, pesan sekarang!" />
-  <meta property="og:image" content="https://mipdevp.com/assets/img/og-image.jpg" />
+  <meta property="og:description" content="Website dengan desain dan teknologi terkini ada di tangan Anda. Mulai dari Company Profile hingga Aplikasi Website, kembangkan bisnis dan jangkau lebih banyak pelanggan. Pesan sekarang!" />
+  <meta property="og:image" content="https://mipdevp.com/web/assets/img/og-image.jpg" />
   <meta property="og:image:width" content="1030" />
   <meta property="og:image:height" content="1030" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Buat Website Terkini dan Berkualitas di Indonesia - MIPDEVP" />
-  <meta name="twitter:description" content="Website desain dengan teknologi terkini ada di tangan Anda. Jangkau lebih banyak pelanggan, pesan sekarang!" />
-  <meta name="twitter:image" content="https://mipdevp.com/assets/img/og-image.jpg" />
+  <meta name="twitter:description" content="Website dengan desain dan teknologi terkini ada di tangan Anda. Mulai dari Company Profile hingga Aplikasi Website, kembangkan bisnis dan jangkau lebih banyak pelanggan. Pesan sekarang!" />
+  <meta name="twitter:image" content="https://mipdevp.com/web/assets/img/og-image.jpg" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -49,6 +50,31 @@
   <link rel="preload" href="assets/img/hero-img.png" as="image">
   <link rel="preload" href="assets/img/logo-mipdevp-buat-website-terkini-terjangkau.png" as="image">
   <link rel="preload" href="assets/img/favicon.png" as="image">
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Corporation",
+      "name": "MIPDEVP",
+      "alternateName": "PT. Berkarya Bareng Bareng",
+      "url": "https://mipdevp.com",
+      "logo": "https://mipdevp.com/web/assets/img/og-image.jpg",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "",
+        "contactType": "customer service",
+        "areaServed": "ID",
+        "availableLanguage": "Indonesian"
+      },
+      "sameAs": [
+        "https://www.youtube.com/c/MipdevpChannel",
+        "https://www.instagram.com/mipdevp/",
+        "https://web.facebook.com/mipdev",
+        "https://www.linkedin.com/company/mipdevp/",
+        "https://mipdevp.com/web"
+      ]
+    }
+    </script>
 
 </head>
 
@@ -307,7 +333,7 @@
                 <a href="assets/img/portfolio/beasiswa-kpbwi-provinsi-lampung.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio/beasiswa-kpbwi-provinsi-lampung.jpg" class="img-fluid" alt="beasiswa kpbwi provinsi lampung projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Beasiswa KPwBI Provinsi Lampung</a></h4>
+                  <h4>Beasiswa KPwBI Provinsi Lampung</h4>
                   <p>Aplikasi Website untuk Kantor Perwakilan Bank Indonesia Provinsi Lampung</p>
                 </div>
               </div>
@@ -318,8 +344,8 @@
                 <a href="assets/img/portfolio/website-promosi-pariwisata-kabupaten-lombok-utara.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio/website-promosi-pariwisata-kabupaten-lombok-utara.jpg" class="img-fluid" alt="website promosi pariwisata kabupaten lombok utara projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Website Promosi Pariwisata Kabupaten
-                    Lombok Utara</a></h4>
+                  <h4>Website Promosi Pariwisata Kabupaten
+                    Lombok Utara</h4>
                   <p>Landing Page untuk Dinas Pariwisata Kabupaten Lombok Utara</p>
                 </div>
               </div>
@@ -330,7 +356,7 @@
                 <a href="assets/img/portfolio/aplikasi-psikotes-pemprov-kalimantan-barat.jpg" data-gallery="portfolio-gallery-app"
                   class="glightbox"><img src="assets/img/portfolio/aplikasi-psikotes-pemprov-kalimantan-barat.jpg" class="img-fluid" alt="aplikasi psikotes pemprov kalimantan barat projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Aplikasi Psikotes Pemprov Kalimantan Barat</a></h4>
+                  <h4>Aplikasi Psikotes Pemprov Kalimantan Barat</h4>
                   <p>Aplikasi Website untuk Pemprov Kalimantan Barat</p>
                 </div>
               </div>
@@ -341,7 +367,7 @@
                 <a href="assets/img/portfolio/sobat-psikotes.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio/sobat-psikotes.jpg" class="img-fluid" alt="sobat psikotes projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Sobat Psikotes</a></h4>
+                  <h4>Sobat Psikotes</h4>
                   <p>Landing Page untuk Sobat Psikotes</p>
                 </div>
               </div>
@@ -352,7 +378,7 @@
                 <a href="assets/img/portfolio/lampung-begawi.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio/lampung-begawi.jpg" class="img-fluid" alt="lampung begawi projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Lampung Begawi</a></h4>
+                  <h4>Lampung Begawi</h4>
                   <p>Landing Page untuk Kantor Perwakilan Bank Indonesia Provinsi Lampung</p>
                 </div>
               </div>
@@ -363,7 +389,7 @@
                 <a href="assets/img/portfolio/forum-investasi-lampung.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio/forum-investasi-lampung.jpg" class="img-fluid" alt="forum investasi lampung projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Forum Investasi Lampung</a></h4>
+                  <h4>Forum Investasi Lampung</h4>
                   <p>Landing Page untuk Kantor Perwakilan Bank Indonesia Provinsi Lampung</p>
                 </div>
               </div>
@@ -374,7 +400,7 @@
                 <a href="assets/img/portfolio/pkbm-gemma-al-fajar.jpg" data-gallery="portfolio-gallery-app"
                   class="glightbox"><img src="assets/img/portfolio/pkbm-gemma-al-fajar.jpg" class="img-fluid" alt="pkbm gemma al fajar projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">PKBM Gemma Al-Fajar</a></h4>
+                  <h4>PKBM Gemma Al-Fajar</h4>
                   <p>Company Profile untuk PKBM Gemma Al-Fajar</p>
                 </div>
               </div>
@@ -385,7 +411,7 @@
                 <a href="assets/img/portfolio/pembinaan-dan-pelatihan-private-mandiri-polisi.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio/pembinaan-dan-pelatihan-private-mandiri-polisi.jpg" class="img-fluid" alt="pembinaan dan pelatihan private mandiri polisi projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Pembinaan dan Pelatihan Private Mandiri Polisi</a></h4>
+                  <h4>Pembinaan dan Pelatihan Private Mandiri Polisi</h4>
                   <p>Aplikasi Website untuk BT-PMP</p>
                 </div>
               </div>
@@ -396,7 +422,7 @@
                 <a href="assets/img/portfolio/institut-teknologi-dan-bisnis-mesuji.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
                     src="assets/img/portfolio/institut-teknologi-dan-bisnis-mesuji.jpg" class="img-fluid" alt="institut teknologi dan bisnis mesuji projek dari mipdevp"></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Institut Teknologi dan Bisnis Mesuji</a></h4>
+                  <h4>Institut Teknologi dan Bisnis Mesuji</h4>
                   <p>Landing Page untuk ITB Mesuji</p>
                 </div>
               </div>
