data aos removed on youtube section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="assets/css/google-font.css" rel="stylesheet">
@@ -595,7 +595,7 @@
 
     <!-- ======= Video Tutorial Terbaru ======= -->
     <section id="youtube-tutorial" class="recent-posts sections-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-header">
           <h2>Video Tutorial Terbaru</h2>
