--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-telegram d-flex align-items-center"><a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener"><span>Telegram - Fast
-              Response</span></a></i>
+        <i class="bi bi-telegram d-flex align-items-center"><a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener"><span>Telegram</span></a></i>
         <i class="bi bi-envelope d-flex align-items-center ms-4"><a
             href="mailto:mipdevp@gmail.com">mipdevp@gmail.com</a></i>
       </div>
