telegram contact added on faqs section

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 <div id="faq-content-1" class="accordion-collapse collapse show" data-bs-parent="#faqlist">
                   <div class="accordion-body">
                    Biaya menyesuaikan dengan kebutuhan dan kompleksitas Website yang dibuat baik itu Landing Page dan Aplikasi Website. Diskusikan kebutuhan Website anda melalui Telegram
-                   <a href="#"> di sini.</a>
+                   <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener"> di sini.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -512,7 +512,7 @@
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
                     Anda bisa menghubungi Admin kami untuk mendapatkan proposal MIPDEVP
-                    sebagai bahan pertimbangan atau diskusi lebih lanjut. Silakan klik <a href="#">link berikut.</a>
+                    sebagai bahan pertimbangan atau diskusi lebih lanjut. Silakan klik <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">link berikut.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -527,7 +527,7 @@
                 </h3>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Kami siap melayani pertanyaan Anda seputar pembuatan website dan pelatihan pemrograman, silakan klik <a href="#">link berikut.</a>
+                    Kami siap melayani pertanyaan Anda seputar pembuatan website dan pelatihan pemrograman, silakan klik <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">link berikut.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
