--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     </section><!-- End Our Services Section -->    
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio sections-bg">
+    <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -435,7 +435,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
-    <section id="faq" class="faq">
+    <section id="faq" class="faq sections-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="row gy-4">
@@ -553,27 +553,28 @@
           <div class="row gy-4">
 
             <div class="col-lg-4">
+              <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">
               <div class="info-item d-flex">
                 <i class="bi bi-telegram flex-shrink-0"></i>
                 <div>
-                  <h4>Telegram</h4>
-                  <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">
-                    <p>Agung Hardiyanto</p>
-                  </a>
+                  <h4>Telegram</h4>                  
+                    <p>Agung Hardiyanto</p>                 
                 </div>
               </div><!-- End Info Item -->
+              </a>
             </div>
 
             <div class="col-lg-4">
+              <a href="mailto:mipdevp@gmail.com">
               <div class="info-item d-flex">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h4>Email:</h4>
-                  <a href="mailto:mipdevp@gmail.com">
+                  <h4>Email:</h4>                  
                     <p>mipdevp@gmail.com</p>
-                  </a>
+                  
                 </div>
               </div><!-- End Info Item -->
+              </a>
             </div>
 
             <div class="col-lg-4">
