cta-image tinified

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <main id="main">
 
     <!-- ======= About Us Section ======= -->
-    <section id="about" class="about sections-bg">
+    <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
