telegram changed to whatsapp

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-telegram d-flex align-items-center"><a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener"><span>Telegram</span></a></i>
+        <i class="bi bi-whatsapp d-flex align-items-center"><a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener"><span>whatsapp</span></a></i>
         <i class="bi bi-envelope d-flex align-items-center ms-4"><a
             href="mailto:mipdevp@gmail.com">mipdevp@gmail.com</a></i>
       </div>
@@ -132,8 +132,8 @@
           </p>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started">Get Started</a>
-            <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener" class="btn-watch-video d-flex align-items-center"><i
-                class="bi bi-telegram"></i><span>Chat Kami</span></a>
+            <a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener" class="btn-watch-video d-flex align-items-center"><i
+                class="bi bi-whatsapp"></i><span>Chat Kami</span></a>
           </div>
         </div>
         <div class="col-lg-5 order-1 order-lg-2">
@@ -255,7 +255,7 @@
       <div class="container text-center" data-aos="zoom-out">
         <h3>Buat Website Impian Anda Sekarang!</h3>
         <p>Konsultasikan apapun yang dibutuhkan untuk mewujudkan Website yang anda inginkan.</p>
-        <a class="cta-btn" href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">Pesan Sekarang</a>
+        <a class="cta-btn" href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener">Pesan Sekarang</a>
       </div>
     </section><!-- End Call To Action Section -->
 
@@ -444,7 +444,7 @@
             <div class="content px-xl-5">
               <h3>Frequently Asked <strong>Questions</strong></h3>
               <p>
-                Pertanyaan Populer yang bisa membantu anda. Jika ada pertanyaan lebih lanjut, hubungi kami dengan <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">klik di sini.</a>
+                Pertanyaan Populer yang bisa membantu anda. Jika ada pertanyaan lebih lanjut, hubungi kami dengan <a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener">klik di sini.</a>
               </p>
             </div>
           </div>
@@ -463,8 +463,8 @@
                 </h3>
                 <div id="faq-content-1" class="accordion-collapse collapse show" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                   Biaya menyesuaikan dengan kebutuhan dan kompleksitas Website yang dibuat baik itu Landing Page dan Aplikasi Website. Diskusikan kebutuhan Website anda melalui Telegram
-                   <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener"> di sini.</a>
+                   Biaya menyesuaikan dengan kebutuhan dan kompleksitas Website yang dibuat baik itu Landing Page dan Aplikasi Website. Diskusikan kebutuhan Website anda melalui whatsapp
+                   <a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener"> di sini.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -511,8 +511,8 @@
                 </h3>
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Anda bisa menghubungi Admin kami untuk mendapatkan proposal MIPDEVP
-                    sebagai bahan pertimbangan atau diskusi lebih lanjut. Silakan klik <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">link berikut.</a>
+                    Anda bisa menghubungi kami untuk mendapatkan proposal MIPDEVP
+                    sebagai bahan pertimbangan atau diskusi lebih lanjut. Silakan klik <a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener">link berikut.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -527,7 +527,7 @@
                 </h3>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Kami siap melayani pertanyaan Anda seputar pembuatan website dan pelatihan pemrograman, silakan klik <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">link berikut.</a>
+                    Kami siap melayani pertanyaan Anda seputar pembuatan website dan pelatihan pemrograman, silakan klik <a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener">link berikut.</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -546,19 +546,19 @@
 
         <div class="section-header">
           <h2>Contact</h2>
-          <p>Hubungi kami via Telegram (respon cepat) untuk diskusi lebih lanjut.</p>
+          <p>Hubungi kami via whatsapp (respon cepat) untuk diskusi lebih lanjut.</p>
         </div>
 
         <div class="col-lg-12">
           <div class="row gy-4">
 
             <div class="col-lg-4">
-              <a href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener">
+              <a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener">
               <div class="info-item d-flex">
-                <i class="bi bi-telegram flex-shrink-0"></i>
+                <i class="bi bi-whatsapp flex-shrink-0"></i>
                 <div>
-                  <h4>Telegram</h4>                  
-                    <p>Agung Hardiyanto</p>                 
+                  <h4>whatsapp</h4>                  
+                    <p>Jution Candra Kirana</p>                 
                 </div>
               </div><!-- End Info Item -->
               </a>
@@ -694,7 +694,7 @@
           <p>
             Jakarta Selatan,
             Indonesia <br><br>
-            <strong>Telegram:</strong><a style="color: #fff;" href="https://t.me/agunghardiyanto12" target="_blank" rel="noreferrer noopener"> Agung Hardiyanto</a><br>
+            <strong>whatsapp:</strong><a style="color: #fff;" href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener"> Jution Candra Kirana</a><br>
             <strong>Email: </strong><a style="color: #fff;" href="mailto:mipdevp@gmail.com" target="_blank" rel="noreferrer noopener"> mipdevp@gmail.com</a><br>
           </p>
         </div>
