--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-whatsapp d-flex align-items-center"><a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener"><span>whatsapp</span></a></i>
-        <i class="bi bi-envelope d-flex align-items-center ms-4"><a
-            href="mailto:mipdevp@gmail.com">mipdevp@gmail.com</a></i>
+        <a href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener"><i class="bi bi-whatsapp d-flex align-items-center"><span>Whatsapp</span></i></a>
+        <a href="mailto:mipdevp@gmail.com"><i class="bi bi-envelope d-flex align-items-center ms-4"><span>mipdevp@gmail.com</span></i></a>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://www.youtube.com/c/MipdevpChannel" target="_blank" rel="noreferrer noopener" class="youtube"><i class="bi bi-youtube"></i></a>        
@@ -546,7 +545,7 @@
 
         <div class="section-header">
           <h2>Contact</h2>
-          <p>Hubungi kami via whatsapp (respon cepat) untuk diskusi lebih lanjut.</p>
+          <p>Hubungi kami via Whatsapp (respon cepat) untuk diskusi lebih lanjut.</p>
         </div>
 
         <div class="col-lg-12">
@@ -557,7 +556,7 @@
               <div class="info-item d-flex">
                 <i class="bi bi-whatsapp flex-shrink-0"></i>
                 <div>
-                  <h4>whatsapp</h4>                  
+                  <h4>Whatsapp</h4>                  
                     <p>Jution Candra Kirana</p>                 
                 </div>
               </div><!-- End Info Item -->
@@ -694,8 +693,8 @@
           <p>
             Jakarta Selatan,
             Indonesia <br><br>
-            <strong>whatsapp:</strong><a style="color: #fff;" href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener"> Jution Candra Kirana</a><br>
-            <strong>Email: </strong><a style="color: #fff;" href="mailto:mipdevp@gmail.com" target="_blank" rel="noreferrer noopener"> mipdevp@gmail.com</a><br>
+            <a style="color: #fff;" href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener"><strong>Whatsapp :</strong> Jution Candra Kirana</a><br>
+            <a style="color: #fff;" href="mailto:mipdevp@gmail.com" target="_blank" rel="noreferrer noopener"><strong>Email :</strong> mipdevp@gmail.com</a><br>
           </p>
         </div>
 
